--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bddtutoriales?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/bddtutoriales
 spring.datasource.username=root
 spring.datasource.password=usbw
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
